--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
-Создать свой композер пакет
-Новый логин, почта, сборщик почты
-Отступы заголовков в lab так же как на zlatov.net, сделать с умом
+Создать свой композер пакет.
+Новый логин, почта, сборщик почты.
+Отступы заголовков в lab так же как на zlatov.net, сделать с умом.
+Разобраться в связи репозиториев через два бар репозитория.
