rails i18n обобщенные поля

--- a/rails/i18n/i18n.md
+++ b/rails/i18n/i18n.md
@@ -47,6 +47,17 @@ ru:
         name: 'Customized title'
 ```
 
+Часто используемые поля (name, email, …) можно вынести и не дублировать:
+
+```
+ru:
+  # Переводы атрибутов всех моделей
+  attributes:
+    name: "Имя"
+    email: "Email"
+    phonenumber: "Номер телефона"
+```
+
 ### Используем
 
 __Вручную__
