--- a/rails/i18n/i18n.md
+++ b/rails/i18n/i18n.md
@@ -3,6 +3,8 @@
 ## Настраиваем
 
 В файле `config/application.rb` указываем `config.i18n.default_locale = :ru` язык по умолчанию.
+А еще можно добавить обзор подпапок: `config.i18n.load_path += Dir[Rails.root.join('config', 'locales', '**', '*.{rb,yml}')]`.
+Есть хороший гем собирающий i18n всех языков rails-i18n.
 
 ## Модель
 
