--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+IMAGES YANDEX DISC IMPORT WITH SYSTEM SETUP
+
 read http://najomi.org/_nix/bash
 http://www.f-notes.info/linux:linux_command
 https://stackoverflow.com/questions/4009412/how-to-use-arguments-from-previous-command?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa
