--- a/rails/i18n/i18n.md
+++ b/rails/i18n/i18n.md
@@ -60,16 +60,49 @@ ru:
     phonenumber: "Номер телефона"
 ```
 
-### Используем
-
-__Вручную__
+__Используем Вручную__
 
 `<%= @order.class.human_attribute_name :name %>`
 
-__Форма автоматически__
+__Используем формой автоматически__
 
 `<%= f.label :name %>`
+
+### Интернационализация enum полей модели
+
+```
+  enum payment_type: [:cash, :cashless]
+```
+
+Добавим в базовый класс (для всех моделей) или в текущий класс метод
+
+```
+  def self.human_enum_name(enum_name, enum_value)
+    I18n.t("activerecord.attributes.#{model_name.i18n_key}.#{enum_name.to_s.pluralize}.#{enum_value}")
+  end
+```
+
+Настройки интернационализации:
+
+```
+  activerecord:
+    attributes:
+      market/model/order:
+        payment_types:
+          cash: "Наличными"
+          cashless: "Безналичный"
+```
+
+__Использование__
+
+```
+Market::Model::Order.human_enum_name(:payment_type, order.payment_type.to_sym)
+```
 
 ## Фразы
 
 Для простого превода фразы достаточно `<%= ::I18n.t :hello %>`
+
+## Интернационализация Даты
+
+[см файл _rails/datetime/date.md_](../datetime/date.md)
