--- a/rails/i18n/i18n.md
+++ b/rails/i18n/i18n.md
@@ -2,34 +2,62 @@
 
 ## Настраиваем
 
-В файле `config/application.rb` указываем `config.i18n.default_locale = :ru` язык по умолчанию.
-А еще можно добавить обзор подпапок: `config.i18n.load_path += Dir[Rails.root.join('config', 'locales', '**', '*.{rb,yml}')]`.
+В файле _config/application.rb_ указываем язык по умолчанию:
+
+```ruby
+config.i18n.default_locale = :ru
+```
+
+А еще можно добавить обзор подпапок:
+
+```ruby
+config.i18n.load_path += Dir[Rails.root.join('config', 'locales', '**', '*.{rb,yml}')]
+```
+
 Есть хороший гем собирающий i18n всех языков rails-i18n.
+
 
 ## Модель
 
 Для интернационализации модель должна быть расширена `ActiveModel::Translation` или унаследована от ActiveRecord
 
-```
+```ruby
 class Form::Order
   extend ActiveModel::Translation
 ```
 
 Теперь наполняем файлы интернационализации так:
 
-
-```
+```yaml
 ru:
   hello: "Привет"
   activerecord:
+    # Имя модели
+    models:
+      market/model/entity:
+        one: компания
+        other: компании
+      market/model/client:
+        one: клиент
+        other: клиенты
+      market/model/affiliate:
+        one: "филиал 1С"
+        other: "филиалы 1С"
+    # Имя полей модели
     attributes:
-      form/order:
-        name: "Имя"
-        email: "Email"
-        phonenumber: "Номер телефона"
+      market/model/affiliate:
+        ui_name: Исправленное имя для ИМ
+      market/model/client:
+        fio: ФИО
+        name: Наименование компании
+        form: Организационно-правовая форма
+        forms:
+          fiz: Физическое лицо
+          yur: Юридическое лицо
+          ip: Индивидуальный предприниматель
 ```
 
-или (идентично)
+или (для моделей не AR)
 
 ```
   activemodel:
@@ -68,40 +96,31 @@ __Используем формой автоматически__
 
 `<%= f.label :name %>`
 
-### Интернационализация enum полей модели
+__Интернационализация enum полей модели__
 
-```
-  enum payment_type: [:cash, :cashless]
-```
-
-Добавим в базовый класс (для всех моделей) или в текущий класс метод
-
-```
-  def self.human_enum_name(enum_name, enum_value)
-    I18n.t("activerecord.attributes.#{model_name.i18n_key}.#{enum_name.to_s.pluralize}.#{enum_value}")
-  end
-```
-
-Настройки интернационализации:
-
-```
-  activerecord:
-    attributes:
-      market/model/order:
-        payment_types:
-          cash: "Наличными"
-          cashless: "Безналичный"
-```
+см файл _rails/model/enum.md_
 
 __Использование__
 
+```ruby
+Market::Model::Order.model_name.human(count: 2).downcase
+Market::Model::Order.human_attribute_name :payment_type
+Market::Model::Order.human_enum_name :payment_type, order.payment_type.to_sym
+@order.human_enum_name :payment_type
 ```
-Market::Model::Order.human_enum_name(:payment_type, order.payment_type.to_sym)
-```
+
 
 ## Фразы
 
-Для простого превода фразы достаточно `<%= ::I18n.t :hello %>`
+Для простого превода фразы достаточно
+
+```ruby
+::I18n.t(:hello)
+```
+```html
+<b><%= t(:hello) %></b>
+```
+
 
 ## Интернационализация Даты
 
