--- a/rails/i18n/i18n.md
+++ b/rails/i18n/i18n.md
@@ -28,7 +28,7 @@ class Form::Order
 
 Теперь наполняем файлы интернационализации так:
 
-```yaml
+```json
 ru:
   hello: "Привет"
   activerecord:
@@ -43,6 +43,12 @@ ru:
       market/model/affiliate:
         one: "филиал 1С"
         other: "филиалы 1С"
+      market/model/product/video_card:
+        zero: "видео-визиток"
+        one: "видео-визитка"
+        few: "видео-визиток"
+        many: "видео-визиток"
+        other: "видео-визитки"
     # Имя полей модели
     attributes:
       market/model/affiliate:
@@ -59,7 +65,7 @@ ru:
 
 или (для моделей не AR)
 
-```
+```json
   activemodel:
     attributes:
       form/order:
@@ -70,7 +76,7 @@ ru:
 
 или (переназначит)
 
-```
+```json
   helpers:
     label:
       form/order:
