--- a/accesses/src/zaccesses.man
+++ b/accesses/src/zaccesses.man
@@ -1,35 +1,21 @@
-.\" Руководство к app.
-.\" Обратитесь к разработчикам для корректировки ошибок.
-.TH man 8 "30 Августа 2018" "1.0" "app man page"
+.\" Руководство к zaccesses.
+.TH man 8 "30 Августа 2018" "1.0" "zaccesses man page"
 .SH НАЗВАНИЕ
-app — деплой маркета и другое.
+zaccesses — доступы проектов и ssh конфигурация
 .SH СИНТАКСИС
-app [<options>] <command> [<args>]
+zaccesses [<options>] <command> [<args>]
 .SH ОПИСАНИЕ
-Основная задача утилиты упростить деплой доменных приложений ЗЕНОН
+Втягивание/заталкивание доступов к проектам или ssh конфигурации на удалённое хранилище используя webdav протокол.
 .SH ПРИМЕРЫ
-app test              — выложить в тесты текущую ветку разработки
-app test market admin
-app deploy            — выложить на продакшн текущую ветку разработки.
-                        При необходимости можно уточнить часть: `app deploy
-                        market framework` или только `app deploy admin`.
-app rollback          — восстановить состояние до предыдущего деплоя.
-                        При необходимости можно уточнить часть: `app rollback
-                        market framework` или только `app rollback admin`.
+zaccesses <projects_group>  — втянуть доступы группы проектов.
+zaccesses sshconfig         — втянуть конфигурацию ssh.
 .SH ОПЦИИ
 .TP
-\fB\-l\fP | \fB\-\-local\fP
-Запустить процесс на \fIлокальной\fP машине.
+\fB\-o\fP | \fB\-\-open\fP
+Откроект \fIлокальные\fP доступы/конфигурацию.
 .TP
-\fB\-t ID_ТЕСТА\fP | \fB\-\-test_id ID_ТЕСТА\fP
-Не создавать новый тест, а использовать уже существующий.
-.TP
-\fB\-y\fP | \fB\-\-yes\fP
-\fIНе запрашивать подтверждения\fP на выполнение действий.
-.TP
-\fB\-d\fP | \fB\-\-detail\fP
-выводить детальный лог выполнения программы.
-.SH SEE ALSO
+\fB\-s\fP | \fB\-\-save\fP
+Втолкнёт \fIлокальные\fP доступы/конфигурацию на удалённое хранилище.
 .SH БАГИ
 Нет известных багов.
 .SH АВТОР
