--- a/rails/i18n/i18n.md
+++ b/rails/i18n/i18n.md
@@ -16,6 +16,42 @@ config.i18n.load_path += Dir[Rails.root.join('config', 'locales', '**', '*.{rb,y
 
 Есть хороший гем собирающий i18n всех языков rails-i18n.
 
+__Плюрализация__
+
+В русскоязычной плюрализации используются три словоформы (0, 1, 2). Для их
+использования необходимы следующие настройки:
+
+```rb
+# config/initializers/pluralization.rb
+require "i18n/backend/pluralization" 
+I18n::Backend::Simple.send(:include, I18n::Backend::Pluralization)
+
+# config/locales/plurals.rb
+{:ru => 
+  { :i18n => 
+    { :plural => 
+      { :keys => [:zero, :one, :few, :other],
+        :rule => lambda { |number| 
+          n = number.abs%100
+          if n >= 11 && n <= 19
+            :zero
+          else
+            case n%10
+            when 1
+              :one
+            when 2..4
+              :few
+            else
+              :zero
+            end
+          end
+        } 
+      } 
+    } 
+  } 
+}
+```
+
 
 ## Модель
 
