--- a/TODO
+++ b/TODO
@@ -1,21 +1,7 @@
-IMAGES YANDEX DISC IMPORT WITH SYSTEM SETUP
-
-read http://najomi.org/_nix/bash
-http://www.f-notes.info/linux:linux_command
+read:
+http://najomi.org/_nix/bash
 https://stackoverflow.com/questions/4009412/how-to-use-arguments-from-previous-command?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa
 
-
-
-EDITOR_PATH=`which subl`
-export EDITOR="$EDITOR_PATH -w"
-
-
-
-toc.js, doc.js
-php interfaces, namespaces
-
-Разнести папку projects по превалирующим технологиям!
-
 Sphinx - поисковая машина.
-Sidekiq - воркер.
-Redis(+Sentinel) - NoSQL бд.
+
+Загуглить как просмотреть список дисков чтобы не ошибиться при переустановке ubuntu
