--- a/rails/i18n/i18n.md
+++ b/rails/i18n/i18n.md
@@ -16,6 +16,14 @@ config.i18n.load_path += Dir[Rails.root.join('config', 'locales', '**', '*.{rb,y
 
 Есть хороший гем собирающий i18n всех языков rails-i18n.
 
+
+```rb
+# Gemfile
+
+# Дебаг интернационализации
+gem 'i18n-debug', group: :development
+```
+
 __Плюрализация__
 
 В русскоязычной плюрализации используются три словоформы (0, 1, 2). Для их
